# anygroundbench

./: .env.example  README.md  ruff.toml  test.py
create_anygroundbench/animal/: README.md  prepare_spatial_clips.py  prepare_videos.py
create_anygroundbench/industry/: README.md  download.sh  prepare_enigma_videos.py  prepare_meccano_videos.py  prepare_spatial_clips.py
create_anygroundbench/safety/: README.md  download.sh  prepare_dota_videos.py  prepare_spatial_clips.py  prepare_uca_videos.py
create_anygroundbench/sports/: README.md  download.sh  prepare_spatial_clips.py  prepare_videos.py
create_anygroundbench/surgery/: README.md  prepare_cholectrack20_videos.py  prepare_egosurgery_videos.py  prepare_spatial_clips.py
envs/: hf.sh  initial.sh
envs/download/: pyproject.toml
envs/eagle/: pyproject.toml
envs/gemini/: pyproject.toml
envs/gpt/: pyproject.toml
envs/internvl/: README.md  pyproject.toml
envs/internvl14B/: pyproject.toml
envs/llama_video/: pyproject.toml
envs/llava/: pyproject.toml
envs/llava_st/: pyproject.toml
envs/qwen/: pyproject.toml
envs/qwen3_5/: main.py  pyproject.toml
envs/vidi/: install.sh  pyproject.toml
scripts/: .gitignore  inference_0shot.sh  inference_2shot.sh
scripts/eval/: backfill_temporal_grouped_summary.py  convert_temporal_predictions_to_eval_json.py  copy_temporal_predictions_to_share.sh  run_spatio_temporal_grounding_bundle.py  run_temporal_grounding_bundle.py  spatial_grounding.sh  spatio_temporal_grounding.sh  temporal_grounding.sh
src/anygroundbench/: base.py  spatial.py  spatio_temporal.py  temporal.py
src/datasets/: __init__.py
src/demo/: run_firstframe_bbox.py  run_sam2_track_from_bbox.py
src/eval/: spatio_temporal_grounding.py  temporal_grounding.py  tube.py  vidi_evaluate.py
src/message_builders/: __init__.py  eagle_message.py  gemini_message.py  gpt_message.py  llava_st_message.py  qwen_message.py
src/models/: __init__.py  eagle.py  gemini.py  gpt.py  intern3.py  llava_st.py  qwen3.py  qwen3_5.py
src/prompts/: __init__.py  registry.py  spatial.py  spatio_temporal.py  temporal.py
src/timestamp/: get_timestamp.py  not_interleave_text.py
src/utils/: setup_logger.py  validate_args.py  video_resize.py
