[project]
name = "dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "av>=17.0.0",
    "gdown>=5.2.1",
    "matplotlib>=3.10.8",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    "sam3>=0.1.3",
    "synapseclient>=4.12.0",
    "transformers>=5.5.0",
    "youtube-dl>=2021.12.17",
    "yt-dlp>=2026.3.17",
    "streamlit>=1.56.0",
    "sentence-transformers>=5.4.1",
    "opencv-python>=4.13.0.92",
    "wandb>=0.27.2",
    "datasets>=5.0.0",
    "peft>=0.19.1",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.10.0",
    "accelerate>=1.14.0",
]
