[project]
name = "gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.4.0",
    "decord>=0.6.0",
    "google-genai>=1.67.0",
    "nltk>=3.9.3",
    "numpy>=2.4.3",
    "pycocoevalcap>=1.2",
    "python-dotenv>=1.2.2",
    "qwen-vl-utils>=0.0.14",
    "rouge-score>=0.1.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
