[project]
name = "internvl14b-env"
version = "0.1.0"
description = "Locked environment for InternVL 14B runs"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate==1.13.0",
    "av==17.0.1",
    "decord==0.6.0",
    "dotenv==0.9.9",
    "einops==0.8.2",
    "flash-attn==2.8.3",
    "httpx==0.28.1",
    "litellm>=1.87.1",
    "nltk==3.9.4",
    "numpy==2.4.4",
    "openai>=2.41.0",
    "pillow==12.1.1",
    "pycocoevalcap==1.2",
    "pycocotools==2.0.11",
    "python-dotenv==1.2.2",
    "qwen-vl-utils==0.0.14",
    "requests==2.33.1",
    "rich==15.0.0",
    "rouge-score==0.1.2",
    "timm==1.0.26",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "transformers==4.57.6",
    "typer==0.24.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[tool.uv]
no-build-isolation-package = ["flash-attn"]
