[project]
name = "video_icl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "absl-py>=2.4.0",
    "accelerate>=1.12.0",
    "apex==0.9.10dev",
    "decord>=0.6.0",
    "deepspeed==0.10.1",
    "einops==0.7.0",
    "fvcore==0.1.5.post20221221",
    "gdown>=5.2.1",
    "imageio==2.31.1",
    "librosa==0.10.1",
    "litellm<1.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy==1.24.4",
    "openai<1.0",
    "opencv-python==4.8.0.76",
    "pandas==2.0.3",
    "peft>=0.19.0",
    "Pillow==10.0.0",
    "psutil==5.9.5",
    "pycocoevalcap>=1.2",
    "pycocotools>=2.0.11",
    "python-dotenv>=1.2.2",
    "PyYAML==6.0.1",
    "qwen-vl-utils>=0.0.14",
    "rouge-score>=0.1.2",
    "scipy==1.13.0",
    "soundfile==0.12.1",
    "streamlit>=1.52.2",
    "termcolor==2.4.0",
    "timm==0.5.4",
    "tqdm==4.66.1",
    "transformers==4.57.5",
    "wandb==0.24.0",
]
