[project]
name = "qwen3-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.4.0",
    "accelerate>=1.13.0",
    "decord>=0.6.0",
    "litellm>=1.87.1",
    "nltk>=3.9.4",
    "openai>=2.41.0",
    "pycocoevalcap>=1.2",
    "python-dotenv>=1.2.2",
    "qwen-vl-utils>=0.0.14",
    "rouge-score>=0.1.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
]
